// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`result actions insight analytics actions > when analyticsMode is \`next\` > logCaseSendEmail > should call relay.emit properly 1`] = `
[
  "InsightPanel.ItemAction",
  {
    "action": "sendEmail",
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
    "itemMetadata": {
      "author": "example author",
      "title": "example documentTitle",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "example contentIDValue",
      "url": "example documentUri",
    },
    "position": 1,
    "responseId": "example searchUid",
  },
]
`;

exports[`result actions insight analytics actions > when analyticsMode is \`next\` > logCopyToClipboard > should call relay.emit properly 1`] = `
[
  "InsightPanel.ItemAction",
  {
    "action": "copyToClipboard",
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
    "itemMetadata": {
      "author": "example author",
      "title": "example documentTitle",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "example contentIDValue",
      "url": "example documentUri",
    },
    "position": 1,
    "responseId": "example searchUid",
  },
]
`;

exports[`result actions insight analytics actions > when analyticsMode is \`next\` > logFeedItemTextPost > should call relay.emit properly 1`] = `
[
  "InsightPanel.ItemAction",
  {
    "action": "postToFeed",
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
    "itemMetadata": {
      "author": "example author",
      "title": "example documentTitle",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "example contentIDValue",
      "url": "example documentUri",
    },
    "position": 1,
    "responseId": "example searchUid",
  },
]
`;
